[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Font/Magnolia Script.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/UI/startButton.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/startButtonP.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Menu/prologue.gd" type="Script" id=4]
[ext_resource path="res://backgroundEffect.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 1
outline_color = Color( 0.65098, 0.0784314, 0.145098, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 1
outline_color = Color( 0.65098, 0.0784314, 0.145098, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "showOne"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "showTwo"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Label2:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Prologue" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.937255, 0.980392, 0.980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -483.0
margin_top = -281.135
margin_right = 489.0
margin_bottom = 307.865
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Flashback before death, refers to a claimed phenomenon widely reported as occurring during near-death experiences, in which a person rapidly sees much or the totality of their life history. "
align = 1
autowrap = true
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 173.963
margin_top = 101.898
margin_right = 467.963
margin_bottom = 172.898
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Wikipedia"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.5
margin_top = 180.944
margin_right = 47.5
margin_bottom = 275.944
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/showOne = SubResource( 3 )
anims/showTwo = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.2

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.2

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
